# ai-subscription-butler

./: .env.example  .gitignore  README.md  SECURITY.md  claude.me  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_app.py  streamlit_config.toml  test_env.py  test_gemini_connection.py  test_gemini_simple.py  verify_gemini.py
.claude/: settings.local.json
.githooks/: pre-commit
app/: __init__.py  config.py  constants.py  main.py
core/: __init__.py
core/agents/: __init__.py  activity_logger.py  base_agent.py  butler_agent.py  monitoring_agent.py  negotiation_agent.py  optimization_agent.py  rules_engine.py
core/ai/: __init__.py  assistant.py  config.py  gemini_client.py  openai_client.py  subscription_extractor.py
core/auth/: auth_manager.py
core/backup/: __init__.py  backup_manager.py
core/database/: data_interface.py  json_storage.py  sqlite_models.py
core/services/: daily_checkup_scheduler.py  price_monitor.py  reminder_system.py
core/templates/: __init__.py  subscription_templates.py
data/: conversations - 副本.json  conversations.json  subscriptions.json  users.json
docs/: ai-add-subscription-feature.md  ai-add-subscription-testing.md  ai-integration.md  architecture.md  database.md  feature-summary.md  gemini-ui-enhancement.md  next-tasks.md  phase2-completion-summary.md  requirement.md  roadmap.md  ui-design.md
scripts/: fix_categories.py  migrate_json_to_sqlite.py  migrate_to_sqlite.py  run_tests.py  setup_ai.py  setup_git_hooks.py  simple_storage_test.py  storage_demo.py  test_reminder_system.py  test_storage.py
tests/: test_json_storage.py  test_negotiation_agent.py  test_openai_client.py
tests/unit/agents/: test_rules_engine.py
ui/components/: activity_stream.py  chat.py  dashboard.py  reminders.py  settings.py  template_selector.py
ui/pages/: add_subscription_page.py  agent_activity_page.py  ai_insights_page.py  analytics_page.py  auth_page.py  automation_settings_page.py  home.py  scan_bill_page.py  settings_page.py  template_page.py
